<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#333"
        android:text="@string/policy" />

    <RadioGroup
        android:id="@+id/radioGroupAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:checkedButton="@id/radioButtonDecline"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline" />

        <RadioButton
            android:id="@+id/radioButtonAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

    </RadioGroup>

</LinearLayout>