<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightCream"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:hint="@string/id"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextId"
        android:layout_alignStart="@id/editTextId"
        android:layout_alignEnd="@id/editTextId"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_alignEnd="@id/editTextId"
        android:layout_marginTop="16dp"
        android:backgroundTint="#555"
        android:text="@string/login" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/buttonLogin"
        android:backgroundTint="#555"
        android:text="@string/register" />

    <Button
        android:id="@+id/buttonToMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/editTextId"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#456"
        android:text="@string/to_main_page" />

    <ImageView
        android:id="@+id/imageViewSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        android:elevation="8dp"
        android:visibility="invisible"
        tools:ignore="ContentDescription" />

</RelativeLayout>